# icukit-pyicu

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: BUILD.md
icukit_pyicu/: __main__.py
tests/: __init__.py  test_icu.py  test_icukit.py
