[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icukit-pyicu"
version = "78.2.1"
description = "Bundled ICU and PyICU for pip"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Kevin A. Lenzo", email = "keinlenzo@gmail.com"}]
requires-python = ">=3.9"
keywords = ["icu", "unicode", "i18n", "pyicu"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://icu.unicode.org/"

[project.scripts]
icukit-config = "icukit_pyicu.__main__:main"

[tool.setuptools]
include-package-data = true
packages = ["icu", "icukit_pyicu"]

[tool.setuptools.package-dir]
"icu" = "icu"
"icukit_pyicu" = "icukit_pyicu"

[tool.setuptools.package-data]
icukit_pyicu = ["include/**/*", "lib/**/*", "bin/**/*"]
icu = ["*.so", "*.dylib", ".dylibs/*", ".libs/*"]