[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icukit-pyicu"
# Version tracks the bundled ICU release: <ICU major>.<ICU minor>.<package revision>.
# The ICU/PyICU pins this version corresponds to live in [tool.icukit-pyicu]
# below; CI reads both the version and the pins from this file.
version = "78.3.0"
description = "Bundled ICU and PyICU for pip"
readme = "README.md"
license = "BSD-2-Clause AND Unicode-3.0"
license-files = ["LICENSE", "LICENSE-ICU"]
authors = [{name = "Kevin A. Lenzo", email = "kevinlenzo@gmail.com"}]
requires-python = ">=3.9"
keywords = ["icu", "unicode", "i18n", "pyicu"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/lenzo-ka/icukit-pyicu"

[project.scripts]
icukit-config = "icukit_pyicu.__main__:main"

# Pins for the bundled upstream components, with verified source checksums.
# CI reads these instead of hardcoding versions in the workflow. When bumping,
# update `version` above and these values together, then verify the checksums.
[tool.icukit-pyicu]
icu-version = "78.3"
pyicu-version = "2.16.2"
# sha256 of icu4c-<icu-version>-sources.tgz from the unicode-org/icu release.
icu-sha256 = "3a2e7a47604ba702f345878308e6fefeca612ee895cf4a5f222e7955fabfe0c0"
# sha256 of the PyICU sdist (pyicu-<pyicu-version>.tar.gz) on PyPI.
pyicu-sha256 = "006d51e24b5ec76df6ec2130f3dde269c51db8b8cfebb7d45a427dde0d10aa52"

[tool.setuptools]
# Only the repo-owned helper package is built by setuptools. The `icu` runtime
# module (PyICU) and the vendored ICU shared libraries are grafted in by CI from
# the delocate/auditwheel output; see docs/BUILD.md.
packages = ["icukit_pyicu"]
include-package-data = true

[tool.setuptools.package-data]
# Present only in CI, where the ICU dev tree is copied into the package before
# packing. Absent in a plain local build, which is expected and harmless.
icukit_pyicu = ["include/**/*", "lib/**/*", "bin/**/*"]
